# drone-demo

./: .gitignore  README.md
autodl_server/: README.md  llava_server.py  requirements.txt  test_llava_server.py
src/drone_demo/: package.xml  setup.cfg  setup.py
src/drone_demo/drone_demo/: camera_recorder.py  figure8_controller.py  laser_controller.py  llava_detector.py  pose_monitor.py  radio_jamming_controller.py  scene_config.py  target_filters.py  target_geometry.py  yolo_detector.py
src/drone_demo/launch/: sim.launch.py
src/drone_demo/resource/: drone_demo
src/drone_demo/tests/: __init__.py  test_llava_detector.py  test_radio_jamming_controller.py  test_scene_defaults.py  test_target_filters.py  test_world_target_pipeline.py
src/drone_demo/worlds/: drone_world.sdf  gui.config
src/drone_figure8/: package.xml  setup.cfg  setup.py
src/drone_figure8/drone_figure8/: circle_controller.py  figure8_controller.py  laser_controller.py  record.py  scene_config.py  yolo_detector.py
src/drone_figure8/launch/: figure8.launch.py  sim.launch.py
src/drone_figure8/resource/: drone_figure8
src/drone_figure8/tests/: __init__.py  test_scene_defaults.py
src/drone_figure8/worlds/: drone_world.sdf  gui.config
